nest first project

--- a/vercel.json
+++ b/vercel.json
@@ -15,12 +15,7 @@
         "GET",
         "POST",
         "PUT",
-        "PATCH",
-        "OPTIONS",
-        "DELETE",
-        "HEAD",
-        "CONNECT",
-        "TRACE"
+        "DELETE"
       ]
     }
   ]
